Analise de algoritmos,

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,5 +15,10 @@ set(SOURCE_FILES Soma.c)
 set(SOURCE_FILES Recursividade.c)
 set(SOURCE_FILES Mdc.c)
 set(SOURCE_FILES Fibonacci.c)
-
+set(SOURCE_FILES ListaDuplaLigada.c)
+set(SOURCE_FILES ListaLigada.c)
+set(SOURCE_FILES AnaliseUm.c)
+set(SOURCE_FILES AnaliseDois.c)
+set(SOURCE_FILES AnaliseUm.c)
+set(SOURCE_FILES AnaliseTres.c)
 add_executable(Algoritmos ${SOURCE_FILES})
